header logo alignment fixes

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -88,9 +88,11 @@ img.site-logo {
 display: none;
 
 }
-
+.login-register {
+  display: none;
+}
 img.site-logo {
   margin-top: -12px;
-  margin-left: -12px;
+  margin-left: 20px;
 }
 }
